# scanox

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/: 1_setup.sql  2_order.sql  3_add_progress.sql
src/: config.rs  main.rs
src/http/: error.rs  mod.rs  orders.rs  razorpay.rs  types.rs  whatsapp.rs
